add getopt to process config file and pickle file

--- a/serconevo/model/config4pickle.ini
+++ b/serconevo/model/config4pickle.ini
@@ -1,3 +1,10 @@
+[DB]
+host: 192.168.1.138
+port: 3306
+password: yed
+username: yed
+db_name: yed_collect
+
 [TABLE]
 listen_table: s_listens_pickle
 connection_table: s_connections_pickle
